# nn-pico

./: Cargo.toml  README.md
.cargo/: config.toml
python/: .gitignore  main.py
src/: main.rs  weights.rs  xorshift.rs
